--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 
       <!-- TODO: PART I Add your own images and use CSS flex to make sure they work on different screen sizes -->
       <div class="gallery-item-container">
-        <img class="gallery-item" src="./assets/jeff.jpg" alt="jeff watching u">
+        <img class="gallery-item" src="./assets/macarons.jpeg" alt="macarons">
+        <img class="gallery-item" src="./assets/profiteroles.jpeg" alt="profiteroles">
+        <img class="gallery-item" src="./assets/cannolis.jpeg" alt="cannolis">
+        <img class="gallery-item" src="./assets/red velvet.jpeg" alt="cake">
+        <img class="gallery-item" src="./assets/cookies.jpeg" alt="cookies">
       </div>
 
       <!-- TODO: PART II Uncomment the line below, and hook up this button to display data from an API -->
