--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <div id="cs1300-gallery">
       <h1>Welcome to my bakery</h1>
-      <p>Add your own images and styles!</p>
+      <button onclick="changeBackgroundColor()"> Click me!</button>
+      <!-- TODO: PART II Uncomment the line below, and hook up this button to display data from an API -->
+      <button onclick="updatePage()">Press this button to display some fruit data</button>
 
       <!-- TODO: PART I Add your own images and use CSS flex to make sure they work on different screen sizes -->
       <div class="gallery-item-container">
@@ -21,10 +23,14 @@
         <img class="gallery-item" src="./assets/cannolis.jpeg" alt="cannolis">
         <img class="gallery-item" src="./assets/red velvet.jpeg" alt="cake">
         <img class="gallery-item" src="./assets/cookies.jpeg" alt="cookies">
+        <img class="gallery-item" src="./assets/cupcake.jpeg" alt="cupcake">
       </div>
+    </div>
 
-      <!-- TODO: PART II Uncomment the line below, and hook up this button to display data from an API -->
-      <!-- <button onclick="">Press this button to display some fruit data</button> -->
+    <div> 
+      <ul id = "fruit-list">
+        
+      </ul>
     </div>
   </body>
 
